[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.12.0"
clap = { version = "4.4.10", features = ["derive"] }
benchmarking = "0.4.12"
rayon = "1.8.0"
indexmap = "2.1.0"